<resources>
    <string name="app_name">Baires Bike</string>
    <string name="action_settings">Configuracion</string>
    <string name="action_search">Buscar</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string name="nav_item_robada">Robada</string>
    <string name="nav_item_bicicleterias">Bicicleterias</string>
    <string name="nav_item_bicisendas">Bicisenda</string>
    <string name="nav_item_cuanto_tardo">Cuanto Tardo</string>
    <string name="nav_item_velocimetro">Velocimetro</string>
    <string name="nav_item_configuracion">Configuracion</string>
    <string name="nav_item_ayuda">Ayuda</string>
    <string name="nav_item_legal">Legal</string>
    <string name="nav_item_sobre">Sobre</string>
    <string name="nav_item_salir">Salir</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_robada</item>
        <item>@string/nav_item_bicisendas</item>
        <item>@string/nav_item_bicicleterias</item>
        <item>@string/nav_item_cuanto_tardo</item>
        <item>@string/nav_item_velocimetro</item>
        <item>@string/nav_item_configuracion</item>
        <item>@string/nav_item_ayuda</item>
        <item>@string/nav_item_legal</item>
        <item>@string/nav_item_sobre</item>
        <item>@string/nav_item_salir</item>
    </string-array>
    <string name="title_bicisendas">Bicisenda</string>
    <string name="title_bicicleterias">Bicicleterias</string>
    <string name="title_robada">Robada</string>
    <string name="title_cuanto_tardo">Cuanto Tardo</string>
    <string name="title_velocimetro">Velocimetro</string>
    <string name="title_configuracion">Configuracion</string>
    <string name="title_ayuda">Ayuda</string>
    <string name="title_sobre">Sobre</string>
    <string name="title_legal">Legal</string>
    <string name="title_salir">Salir</string>
    <string name="hora_inicio">00:00:00 am</string>
    <string name="velocidad_maxima">Velocidad Maxima (km/h)</string>
    <string name="velocidad_actual">Velocidad actual (km/h)</string>
    <string name="velocidad_0">00.00</string>
    <string name="userName">Usuario</string>
    <string name="ip_url">IP o URL del servicio BikeRobada</string>
    <string name="guardar_parametros">Guardar parametros</string>
    <string name="url_error">El campo url no puede estar en vacio.</string>
    <string name="url_error_read">No se pudo recuperar la informacion de la URL.</string>
    <string name="parametros_guardados">Parametros guardados</string>
    <string name="url_consulta_texto">Si no sabe cual debe ingresar puede probar usando
    "dotworld.no-ip.info".\n
    Si aun sigue sin poder operar la APP le recomendamos que visite el sitio
    http://dotworld.no-ip.info/servicios.html para poder ver que otros servidores
    estan disponibles.</string>
</resources>